<resources>
    <string name="app_name">InterfacezApp</string>
    <string name="toolbar_title_createaccount">Crear Cuenta</string>
    <string name="hint_email">Correo</string>
    <string name="hint_mame">Nombre</string>
    <string name="hint_apePaterno">Apellido Paterno</string>
    <string name="hint_apeMaterno">Apellido Materno</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="text_button_createaccout">Crear Cuenta</string>
    <string-array name="tipo_cuenta">
        <item>Estudiante</item>
        <item>Arrendador</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar,</string>
</resources>
